--- a/web/player.html
+++ b/web/player.html
@@ -19,6 +19,18 @@
             <span>UIPTV DRM</span>
         </a>
         <div class="top-actions">
+            <label class="top-action" for="audio-select" title="Audio tracks">
+                <i class="bi bi-music-note-list"></i>
+                <select id="audio-select">
+                    <option value="">Audio</option>
+                </select>
+            </label>
+            <label class="top-action" for="subtitle-select" title="Subtitles">
+                <i class="bi bi-badge-cc"></i>
+                <select id="subtitle-select">
+                    <option value="off">Subtitles Off</option>
+                </select>
+            </label>
             <a class="top-action" href="/index.html" title="Home">
                 <i class="bi bi-grid-3x3-gap-fill"></i>
                 <span>Home</span>
