--- a/web/myflix.html
+++ b/web/myflix.html
@@ -4,6 +4,9 @@
     <title>UIPTV Web - MyFlix View</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#0b0b0b">
     <link rel="icon" type="image/x-icon" href="/icon.ico">
@@ -14,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/myflix.css">
+    <link rel="stylesheet" href="/css/myflix.css?v=20260224a">
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/shaka-player@5/dist/shaka-player.compiled.js"></script>
 </head>
@@ -548,7 +551,7 @@
     </div>
 </div>
 
-<script src="javascript/myflix.js"></script>
+<script src="/javascript/myflix.js?v=20260224a"></script>
 <script>
     function scrollRow(id, direction) {
         const row = document.getElementById(id);
